abs/public/stylesheets/main.css
h1 {
	text-align: center;
}

.hide-span {
	width: 0;
	margin-left: -1px;
}

.col-centered {
	float: none;
	margin: 0 auto;
}

.flash {
	width: 100%;
	text-align: center;
}

.flash-success {
	background: lightgreen;
}

.flash-error {
	background: lightcoral;
}

.flash-info {
	background: lightgoldenrodyellow;
}

